Fixed some text by Benjamin
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@215 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/tex/BBBar.tex
+++ b/doc/tex/BBBar.tex
@@ -25,16 +25,17 @@ the same benchmark parameters of the $t\bar t$ case could be chosen.
 There are some subtleties to the Monte Carlo simulation relevant for
 this case that are discussed in Appendix~\ref{app:MonojetLikeModels_Appendix}.
 
-\Todo{[TODO: The following figures are placeholders for now and will be added later].  If these are supporting material for the MC generation, put in the appendix}.
-
-\begin{figure}
-    \vbox{\hfill}
-    \caption{\label{fig:bbscanPhi} Example of the dependence of the kinematics on the scalar mediator mass. 
-    	The Dark Matter mass is fixed to be $1 {\rm GeV}$.}
-\end{figure}
-
-\begin{figure}[!ht]
-    \vbox{\hfill}
-    \caption{\label{fig:bbscanPhiPseudo} Example of the dependence of the kinematics on the pseudoscalar mediator mass. 
-    	The Dark Matter mass is fixed to be $1 {\rm GeV}$.}
-\end{figure}
+% Removing these plots as they won't make it last-minute. 
+%\Todo{[TODO: The following figures are placeholders for now and will be added later].  If these are supporting material for the MC generation, put in the appendix}.
+%
+%\begin{figure}
+%    \vbox{\hfill}
+%    \caption{\label{fig:bbscanPhi} Example of the dependence of the kinematics on the scalar mediator mass. 
+%    	The Dark Matter mass is fixed to be $1 {\rm GeV}$.}
+%\end{figure}
+%
+%\begin{figure}[!ht]
+%    \vbox{\hfill}
+%    \caption{\label{fig:bbscanPhiPseudo} Example of the dependence of the kinematics on the pseudoscalar mediator mass. 
+%    	The Dark Matter mass is fixed to be $1 {\rm GeV}$.}
+%\end{figure}
