--- a/doc/tex/SingleTop.tex
+++ b/doc/tex/SingleTop.tex
@@ -168,20 +168,28 @@ in flavor space.
   requirements are difficult to accomodate~\cite{CMSmonotop}. In contrast, the
   study of  Ref.~\cite{Boucheneb:2014wza} has imposed electroweak gauge invariance and
   requires minimality, which enforces all new couplings to be right-handed,
-  \begin{equation}
-  a^{1/2}_{SR} = b^{1/2}_{SR} = \frac12 y_s^*
-  \qquad\text{and}\qquad
-  a^q_{SR} = b^q_{SR} = \frac12 \lambda_s \ .
-  \end{equation}
-  where
 
-\todo{Missing sentence?}
 
-  This class of scenarios is the one that has been adopted by ATLAS for its
-  Run~I monotop searches~\cite{ATLASmonotop} and will be considered by both
-  collaboration for Run~II analyses. In this case, the object $\lambda_s$ is a
-  tridimensional vector whilst the Yukawa coupling $y_s$ is a $3\times 3$ matrix
-  in flavor space.
+
+
+Under the form of Eq.~\eqref{eq:lagrangianResonant}, the Lagrangian is the one
+introduced in the original monotop search proposal~\cite{AndreaFuksMaltoni}. It has been
+used by the CMS collaboration for Run I analyses after neglecting all pseudoscalar components
+of the couplings and adding the vector resonance case for which minimality
+requirements are difficult to accomodate~\cite{CMSmonotop}. In contrast, the
+study of Ref.~\cite{Boucheneb:2014wza} has imposed electroweak gauge invariance and
+required minimality. This enforces all new couplings to be right-handed so that
+\begin{equation}
+a^{1/2}_{SR} = b^{1/2}_{SR} = \frac12 y_s^*
+\qquad\text{and}\qquad
+a^q_{SR} = b^q_{SR} = \frac12 \lambda_s \ ,
+\end{equation}
+where the objects $\lambda_s$ and $y_s$ are
+a tridimensional vector and a $3\times 3$ matrix
+in flavor space respectively. 
+This class of scenarios is the one that has been adopted by the ATLAS collaboration for its
+Run~I monotop searches~\cite{ATLASmonotop} and will be considered by both
+collaborations for Run~II analyses.
 
 %In the following, we only consider the model with a new colored scalar, as the requirement of invariance
 %under $SU(2)_L \times U(1)_Y$ would require the introduction of further particles in the case of a new colored vector~\cite{Boucheneb:2014wza}.
