Mono-X to MET+X whenever general
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@216 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/tex/EFTValidity.tex
+++ b/doc/tex/EFTValidity.tex
@@ -29,7 +29,7 @@ be parametrized by $f={g\over \Lambda^2}$.
 A monojet signature can be generated
 by applying perturbation theory in the QCD coupling (assuming $\phi$\Todo{right symbol?} is
 a quark, for example).
-A mono-X analysis will place a limit on $f$.   
+An experimental search will place a limit on $f$.   
 For a fixed $f$, a small value of $g$ will require
 a small value of $\Lambda$.   The EFT approximation breaks down
 if $Q>\Lambda$, where $Q$ is a typical hard scale of the process.
@@ -92,7 +92,7 @@ In \cite{Racco:2015dxa} a procedure to extract model independent and consistent 
 The range of applicability of the EFT is defined by a mass scale \Mcut, a parameter which marks the upper limit of the range of energy scales at which the EFT can be used reliably, independently of the particular completion of the model. 
 Regardless of the  details of the full theory, the energy scale probing the validity of the EFT is less than or equal to the center-of-mass energy $E_\text{cm}$, 
 the total invariant mass of the hard final states of the reaction.
-To be specific, consider the basic monojet process with kinematics
+To be specific, consider the basic mono-jet process with kinematics
 $p_1 + p_2 \to k + p_{\bar\chiDM\chiDM}$: $k$ is the momentum of the outgoing jet, whereas $p_{\bar\chiDM\chiDM}$ is the momentum of the $\bar\chiDM\chiDM$ pair and
 $p_{\bar\chiDM\chiDM}=\Qtr$.  $E_\text{cm}^2 = (p_1+p_2)^2 > \Qtr^2$.
 The condition ensuring the validity of the EFT is, by definition of \Mcut,
