--- a/doc/tex/EWSpecificModels_EFT.tex
+++ b/doc/tex/EWSpecificModels_EFT.tex
@@ -189,7 +189,14 @@ g_{ZZ}  & = s_w^2 \hspace{0.25mm} c_1 + c_w^2  \hspace{0.25mm} c_2  \,, \\[1mm]
 g_{WW} & = c_2 \,,
 \end{split}
 \end{equation}
-with $s_w$ ($c_w$) the sine (cosine) of the weak mixing angle. Note that our coefficients $c_1$ and $c_2$ are identical to the coefficients $C_B$ and $C_W$ used in \cite{Crivellin:2015wva}, while they are related via $k_1 = \frac{1}{{c_w}^2} c_1$ and $k_2 = \frac{1}{{s_w}^2} c_2$ to the coefficients $k_1$ and $k_2$ introduced in \cite{Carpenter:2012rg}.
+with $s_w$ ($c_w$) the sine (cosine) of the weak mixing angle. Note that our coefficients $c_1$ and $c_2$ are identical to the coefficients $C_B$ and $C_W$ used in \cite{Crivellin:2015wva}, while they are related via $k_1 = {c_w}^2 c_1$ and $k_2 = {s_w}^2 c_2$ to the coefficients $k_1$ and $k_2$ introduced in \cite{Carpenter:2012rg}.
+
+%Uli:
+%the couplings k_1,2 "defined"  there agree with my c_1,2 if one identifies
+%
+%k_1 = c_W^2 c_1
+%
+%k_2 = s_W^2 c_2
 
 The coefficients $c_1$ and $c_2$ appearing in (\ref{eq:gViVj}) determine the relative importance of each of the \MET channels and their correlations. For example, one observes that:
 \begin{itemize}
@@ -220,8 +227,8 @@ Todo{When we have the cross-sections for both, we can recommend the one with the
 %\end{figure}
 
 The differences in kinematics for the various signatures
-are negligible when changing the coefficients $k_1$ and $k_2$, as shown
-in Figure~\ref{fig:EFTD7_EW_kinematics}. Only the case $k_1=k_2=1$ is generated as benchmark;
+are negligible when changing the coefficients $c_1$ and $c_2$, as shown
+in Figure~\ref{fig:EFTD7_EW_kinematics}. Only the case $c_1=c_2=1$ is generated as benchmark;
 other cases are left for reinterpretation as they will only need a rescaling of the cross-sections
 shown in Appendix~\ref{app:EWSpecificModels_Appendix} for the various DM
 mass points considered.
@@ -322,6 +329,8 @@ to the dimension 8 operator.
 It is important to remember that the operators described in 
 this section may present problems in terms of the validity of the contact interaction
 approach for the energy scales reached at the LHC. 
+
+\todo{Include comment about UV completion of EFT Dim 7 with loops. Uli is working on this.}
 
 As outlined in~\cite{Berlin:2014cfa}, designing very high \MET search signal regions
 that are exclusively motivated by the hard \MET spectra of the dimension 7 and 8 operators
