--- a/doc/tex/Introduction.tex
+++ b/doc/tex/Introduction.tex
@@ -9,9 +9,11 @@ Dark matter has not yet been seen in particle physics experiments, and
 there is not yet any evidence for non-gravitational interactions between dark
 matter and Standard Model particles.  If such interactions exist,
 pairs of dark matter particles could be produced at the LHC, leading
-to so-called 'mono-X' signatures.
+to signatures including one or more hard objects~\footnote{In the case of a single hard object, 
+	these signatures are commonly called 'mono-X'.} in association with
+missing transverse energy (\MET{} + X). 
 
-Early Run 1 searches for 'mono-X' signatures at ATLAS and CMS employed
+Early Run 1 searches for \MET{}+X signatures at ATLAS and CMS employed
 a set of effective field theories (EFTs) \cite{Goodman:2010ku} to
 model the possible signals. If a contact interaction is the correct
 description of dark matter pair production at colliders, the missing
@@ -27,13 +29,13 @@ From the Run 1 results, however, it has become clear
 \cite{Busoni:2013lha} that a contact interaction is often not the
 correct description for the signals to which the LHC is truly
 sensitive. The LHC is exploring a regime where the mediating process
-may play a more interesting role, leading to mono-X signals that can
+may play a more interesting role, leading to signals that can
 be kinematically distinct from those predicted by the EFT, as well as
 qualitatively different signatures requiring new search
 strategies. While the EFT integrates out the degrees of freedom of the
 (heavy) intermediate particle, ``simplified models''
 \cite{Alves:2011wf} with directly-accessible mediators describe this
-richer phenomenology. Such models can be used both to interpret mono-X
+richer phenomenology. Such models can be used both to interpret \MET{}+X
 searches and to guide the design of complementary searches for
 additional signatures. 
 
@@ -87,7 +89,7 @@ Dark Matter itself: it is assumed to be a particle, stable on collider
 timescales and non-interacting with the detector, and a Dirac fermion.
 The latter is a practical choice, given that the Forum relied upon a
 large body of theoretical work which made this assumption. Many of the
-conclusions in this report should also apply to MET signals of
+conclusions in this report should also apply to \MET{} signals of
 Majorana fermion DM or scalar DM with some minor modification to
 account for their different angular distributions, especially when
 considering cut-and-count analysis. Thus the choice of Dirac fermion
