First part of Priscilla's comments
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@217 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/doc.bib
+++ b/doc/doc.bib
@@ -357,7 +357,7 @@
   VOLUME       = "1311",
   ISSUE        = "014",
   PAGES        = "",
-  YEAR         = "2013",
+  year         = "2013",
 }
 @ARTICLE{Yavin:14092893,
   AUTHOR       = "Jalal Abdallah and others",
@@ -366,7 +366,7 @@
   VOLUME       = "",
   ISSUE        = "",
   PAGES        = "",
-  YEAR         = "2014",
+  year         = "2014",
 }
 @article{Malik:2014ggr,
       author         = "Malik, Sarah and McCabe, Christopher and Araujo, Henrique
@@ -446,7 +446,7 @@
   VOLUME       = "11",
   ISSUE        = "",
   PAGES        = "171",
-  YEAR         = "2013",
+  year         = "2013",
 }
 @ARTICLE{An:201489115014,
   AUTHOR       = "Haipeng An and Lian-Tao Wang and Hao Zhang",
@@ -455,7 +455,7 @@
   VOLUME       = "89",
   ISSUE        = "",
   PAGES        = "115014",
-  YEAR         = "2014",
+  year         = "2014",
 }
 @article{Busoni:2014haa,
       author         = "Busoni, Giorgio and De Simone, Andrea and Jacques, Thomas
