--- a/doc/tex/MonojetLikeModels.tex
+++ b/doc/tex/MonojetLikeModels.tex
@@ -57,7 +57,7 @@ the mediator and dark matter masses, and the mediator couplings to dark matter a
   \vspace{0.5\baselineskip}
 \end{figure}
 
-We consider vector and axial-vector couplings
+We consider two models with vector and axial-vector couplings
 between the spin-1 mediator and SM and DM fields, with
 the corresponding interaction Lagrangians:
 \begin{align}
@@ -66,11 +66,15 @@ the corresponding interaction Lagrangians:
 \mathcal{L}_{\rm{axial-vector}} &= \gq \sum_{q=udscbt}  \Zprime_{\mu} \bar{q}\gamma^{\mu}\gamma^5q + \gDM \Zprime_{\mu} \bar{\chiDM}\gamma^{\mu}\gamma^5\chiDM.
 \end{align}
 The coupling \gq is assumed to be universal to all quarks. 
-It is also possible to consider another model in which mixed vector and axial-vector couplings are considered, for instance the couplings to the quarks are vector whereas those to DM are axial-vector. We recommend the models with
+It is also possible to consider other models in which mixed vector and axial-vector couplings are considered, 
+for instance the couplings to the quarks are vector whereas those to DM are axial-vector. We recommend the models with
 pure vector couplings or pure axial vector couplings.
 \Todo{Studies have been performed to see if the case of a mixed coupling can be simply extracted from the other models by some reweighting procedure to take account of the difference in cross section. This would assume that the difference between the pure and mixed couplings case does not affect the kinematics of the event.}
 %Definition of minimal width
-When no additional visible or invisible decays contribute to the width of the mediator, the width is fixed by the choices of couplings $\gq$ and $\gDM$. We refer to the width in this situation as the minimal width\footnote{See page \pageref{paragraph:nonminimalwidth} for a discussion of the effect of larger widths.}. For the vector and axial-vector models,
+As mentioned in the introduction, when no additional visible or invisible decays contribute to the width of the mediator, 
+the minimal width is fixed by the choices of couplings $\gq$ and $\gDM$. The effect of larger 
+widths is discussed on page \pageref{paragraph:nonminimalwidth}. 
+For the vector and axial-vector models, the minimal width is
 
 \begin{equation}
 %\Gamma_{\rm{min}}=\Gamma_{\bar{\chiDM}\chiDM} + \sum_{q}N_{c}\Gamma_{\bar{q}q}
@@ -608,7 +612,7 @@ The proposal for the scan in the $\gq$--$\gDM$ plane is described in the followi
 
 
 
-\section{Cross section scaling}
+\section{Presentation of results for reinterpretation}
 \label{sec:monojet_scaling}
 
 The aim of the parameter grid optimization is to
@@ -732,12 +736,12 @@ The limiting case $\Gamma_{\rm{min}}=\mMed$ is shown as a black line.}
 \end{figure}
 
 
-\paragraph{Proposed parameter grid}
+\paragraph{Proposed parameter grid for cross-section scaling}
 
 We propose to present the results in the $\gq$--$\gDM$ plane using the following prescription:
 \begin{itemize}
 \item Since the shapes of kinematic quantities do not change for different couplings, use the acceptance and efficiency for the available $\mDM=50$~\gev, $\mMed=300$~\gev, $\gq=\gDM=1$ grid point from the $\mMed$--$\mDM$ plane for the scalar and pseudo-scalar mediator. In case of the vector and axial-vector mediator, use the grid point $\mDM=50$~\gev, $\mMed=1$~\tev, $\gq=\gDM=1$.
-\item Generate additional samples in order to get generator cross sections only. For scalar and pseudo-scalar mediator, choose $\mDM=50$~\gev, $\mMed=300$~\gev with the following values for $\gq=\gDM$: 0.1, 2, 3, 4, 5, 6. For vector and axial vector mediator, choose $\mDM=50$~\gev, $\mMed=1$~\tev with the following values for $\gq=\gDM$: 0.1, 0.25, 0.5, 0.75, 1.25, 1.5. The upper values are defined by the minimal width reaching the mediator mass. \Todo{We may agree on a smaller set of coupling values to get the cross-sections (those samples are not fully simulated anyway, and maybe the Forum can provide this information centrally.).}
+\item Generate additional samples in order to get generator cross sections only. For scalar and pseudo-scalar mediator, choose $\mDM=50$~\gev, $\mMed=300$~\gev with the following values for $\gq=\gDM$: 0.1, 2, 3. For vector and axial vector mediator, choose $\mDM=50$~\gev, $\mMed=1$~\tev with the following values for $\gq=\gDM$: 0.1, 0.25, 0.5, 0.75, 1.25, 1.5. The upper values are defined by the minimal width reaching the mediator mass. \Todo{Waiting for scalar mediator calculation of perturbativity limit from J. Alcaraz.).}
 \item Rescale the generator cross sections along the lines of constant width in order to populate the whole $\gq$--$\gDM$ plane.
 \end{itemize}
 
@@ -763,7 +767,7 @@ Here, it is again assumed the narrow width approximation applies.
 The advantage of doing this is in the fact that no event selection and detector response needs to be simulated since the changes in couplings do not have an effect on the shapes of kinematic distributions.
 
 \section{Colored scalar mediator, \tchannel exchange}
-
+\label{sec:monojet_t_channel}
 \input tex/TChannelModels.tex
 
 \section{Spin-2 mediator}
